# FOC

./: .cproject  .gitignore  .mxproject  .project  0512_BLDC_STM32 Debug.launch  0512_BLDC_STM32.ioc
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
Core/Inc/Board/AS5047P/: as5047p.h
Core/Inc/Board/DRV8353RS/: drv8353rs.h  drv8353rs_type.h
Core/Inc/Board/KTH7824/: kth7824.h
Core/Inc/Board/MT6835/: mt6835.h
Core/Inc/Communication/: canopen.h  cdc_debug.h  ethercat.h  spi_switch.h  transport.h  usart_cli.h
Core/Inc/Communication/mcp2518fd/: can_telemetry.h  canopen.h  drv_canfdspi_api.h
Core/Inc/MotorControl/Control/: foc.h  motor_control.h  param_identify.h
Core/Inc/MotorControl/Core/: mc_interface.h  mc_type.h  motor_parameters.h
Core/Inc/MotorControl/Fbdk/: curr_fbdk.h  encoder.h  speed_pos_fbdk.h  speed_pos_type.h
Core/Inc/MotorControl/Safety/: safety_task.h  safety_type.h
Core/Inc/MotorControl/Tasks/: mc_tasks.h  tem_task.h
Core/Inc/Utils/: mc_math.h
Core/Src/: adc.c  app_freertos.c  dma.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c
Core/Src/Communication/: canopen.c  ethercat.c  spi_switch.c  transport.c  usart_cli.c
Core/Src/MotorControl/: mc_interface.c
Core/Src/Utils/: mc_math.c
Doc/: CAN Communication Protocol Specification.docx  can_communication_guide.md  cdc_debug_protocol.md  cia402_communication_guide.md  encoder_switch_guide.md
Qt/FOC_Control/: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  serial_backend.cpp  serial_backend.h
USB_Device/App/: usbd_cdc_if.c  usbd_cdc_if.h
(+27 files in other folders)
